Decreased menu/dropdown font size to prevent overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -64,7 +64,7 @@ body {
     height: 64px;
     line-height: 64px;
     width: 1024px;
-    font-size: 125%;
+    font-size: 100%;
     background: #4040ff;
 
     a {
@@ -92,7 +92,7 @@ body {
       min-width: 100px;
       padding: 12px 16px;
       z-index: 1;
-      font-size: 100%;
+      font-size: 80%;
     }
     
     .dropdown:hover .dropdown-content {
